@@ -16,6 +16,12 @@ Release 0.1.3 - Unreleased
    HBASE-674   Memcache size unreliable
    HBASE-665   server side scanner doesn't honor stop row
    HBASE-681   NPE in Memcache (Clint Morgan via Jim Kellerman)
+   HBASE-680   config parameter hbase.io.index.interval should be
+               hbase.index.interval, accroding to HBaseMapFile.HbaseWriter
+               (LN via Stack)
+   HBASE-684   unnecessary iteration in HMemcache.internalGet? got much better
+               reading performance after break it (LN via Stack)
+
 
 Release 0.1.2 - 05/13/2008
 
